engine/codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__slash_commands__pending_copy.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 2392
expression: pending
---
• Copying last message…
